// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story Snapshots: BlackTheme should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#080808",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Input Form (black theme)"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#3976D1",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Input Form (black theme)
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: ConfirmationOnly should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Confirmation Only (No Input)"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Confirmation Only (No Input)
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: CustomButtonColors should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Custom Button Colors"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Custom Button Colors
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: CustomOnCancel should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show With Custom Cancel"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show With Custom Cancel
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: CustomValidation should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Custom Validation"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Custom Validation
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: DarkTheme should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#1A1E23",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Input Form (dark theme)"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#095AD2",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Input Form (dark theme)
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: LightTheme should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Input Form (light theme)"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Input Form (light theme)
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: MultipleInputs should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Multiple Inputs"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Multiple Inputs
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: SingleSecureInput should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Secure Input"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Secure Input
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: SingleTextInput should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show Single Text Input"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show Single Text Input
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: WithAutoComplete should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show With AutoComplete"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show With AutoComplete
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: WithCustomText should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show With Custom Text"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show With Custom Text
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;

exports[`Story Snapshots: WithIconAndDescription should match snapshot 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "off",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "backgroundColor": "#F2F3F5",
      },
      {
        "flex": 1,
        "padding": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "marginBottom": 12,
      }
    }
  >
    <View
      accessibilityLabel="Show With Icon & Description"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#156FF5",
          "borderRadius": 4,
          "justifyContent": "center",
          "marginBottom": 12,
          "opacity": 1,
          "paddingHorizontal": 16,
          "paddingVertical": 14,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#FFFFFF",
              "fontSize": 16,
            },
            {
              "backgroundColor": "transparent",
              "fontFamily": "Inter",
              "fontWeight": "500",
              "textAlign": "center",
            },
            undefined,
          ]
        }
      >
        Show With Icon & Description
      </Text>
    </View>
  </View>
</RNCSafeAreaView>
`;
